src/test/deca/context/valid/provided/ContextSansObjet/Condition/IfElse.deca
//description:
// test de la structure ifThenElse
//
//Résultat:
//la condition est fausse
//
{
boolean bool=false;
if(bool)
{
println("la condition est bonne");
}
else
{
println("la condition est fausse");
}
}
