src/test/deca/context/invalid/provided/ContextSansObjet/IdentificationBoolAssignString.deca
{
	boolean x;
	x = "Hello";
	println(x);
}